--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Melodies</title>
-    <link href="output.css" rel="stylesheet" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"></head>
-  <body class="bg-[#18181b] text-white">
-    <div id="app"></div>
-  <script defer src="./bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Melodies</title><link href="output.css" rel="stylesheet"/><meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"></head><body class="bg-[#18181b] text-white"><div id="app"></div><script defer="defer" src="./bundle.js"></script></body></html>
